# coref_api_1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
coref_api/: main.py  utils.py
tests/: test_coref_api.py
