[tool.poetry]
name = "coref_api"
version = "0.1.0"
description = ""
authors = ["Daniel Boadzie <boadziedaniel43@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.68.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
