[tool.poetry]
name = "coref_api"
version = "0.1.0"
description = "Coreference Resolution API"
authors = ["Daniel Boadzie <boadziedaniel43@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.68.1"
neuralcoref="4.0"
spacy="2.1.0"
uvicorn="0.15.0"
isort = "^5.9.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core==1.0.4"]
build-backend = "poetry.core.masonry.api"

